force-app/main/default/objects/Integration_Error__c/fields/Enquix_ID__c.field-meta.xml
<CustomField>
    <fullName>Enquix_ID__c</fullName>
    <description>The enquix ID that caused the error (if applicable).</description>
    <label>Enquix ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>