force-app/main/default/objects/Integration_Error__c/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <description>Code associated with the error.</description>
    <label>Error Code</label>
    <length>70</length>
    <type>Text</type>
</CustomField>