force-app/main/default/objects/Integration_Error__c/fields/Error_ID__c.field-meta.xml
<CustomField>
    <fullName>Error_ID__c</fullName>
    <description>The error identifier. If the error was found during the Salesforce to Enqix process, it will be the Salesforce ID. Else, if the process was frm Enqix to Salesforce it will be the Enqix ID.</description>
    <label>Error ID</label>
    <length>70</length>
    <type>Text</type>
</CustomField>