force-app/main/default/objects/Integration_Error__c/fields/Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Process_Name__c</fullName>
    <description>The type of loading process: Enqix to Salesforce or Salesforce to Enqix.</description>
    <label>Process Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>