force-app/main/default/objects/Integration_Error__c/fields/Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Name__c</fullName>
    <description>The name of the account, location or other that correspond to the ID of the error (salesforce or enqix).</description>
    <label>Record Name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>