force-app/main/default/objects/Integration_Error__c/fields/Salesforce_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_ID__c</fullName>
    <description>The Salesforce object ID that caused the error (if applicable).</description>
    <label>Salesforce ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>