force-app/main/default/objects/Integration_Error__c/fields/sf_link__c.field-meta.xml
<CustomField>
    <fullName>sf_link__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; Salesforce_ID__c, Salesforce_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>sf_link</label>
    <type>Text</type>
</CustomField>