force-app/main/default/objects/Integration_Error__c/fields/Table_Name__c.field-meta.xml
<CustomField>
    <fullName>Table_Name__c</fullName>
    <description>The name of the table where the error appeared.</description>
    <label>Table Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>