force-app/main/default/objects/Integration_Error__c/listViews/Enqix_to_SF.listView-meta.xml
<ListView>
    <fullName>Enqix_to_SF</fullName>
    <columns>Process_Name__c</columns>
    <columns>Table_Name__c</columns>
    <columns>Enquix_ID__c</columns>
    <columns>sf_link__c</columns>
    <columns>Error_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Process_Name__c</field>
        <operation>equals</operation>
        <value>enqix_to_sf</value>
    </filters>
    <filters>
        <field>Table_Name__c</field>
        <operation>contains</operation>
        <value>Invoice</value>
    </filters>
    <label>Enqix to SF</label>
</ListView>