force-app/main/default/objects/Integration_Error__c/listViews/SF_to_Enqix.listView-meta.xml
<ListView>
    <fullName>SF_to_Enqix</fullName>
    <columns>Process_Name__c</columns>
    <columns>Table_Name__c</columns>
    <columns>sf_link__c</columns>
    <columns>Error_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Process_Name__c</field>
        <operation>equals</operation>
        <value>sf_to_enqix</value>
    </filters>
    <filters>
        <field>Error_Description__c</field>
        <operation>contains</operation>
        <value>BID Location Limit</value>
    </filters>
    <label>SF to Enqix</label>
</ListView>